--- a/public/style.css
+++ b/public/style.css
@@ -22,11 +22,12 @@ body {
 	width: 500px;
 	height: 500px;
 	border-radius: 3px;
-	background: #1E1E1E url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQYV2P8+vWrJAMRgBGkkJub+zkhtaMK8YYQ0cEDABxGJwNr5yClAAAAAElFTkSuQmCC);
+ /*background: #1E1E1E url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQYV2P8+vWrJAMRgBGkkJub+zkhtaMK8YYQ0cEDABxGJwNr5yClAAAAAElFTkSuQmCC);*/
+ background: #993300
 }
 
 #synth-pad:hover {
-	cursor: crosshair;
+	cursor: help;;
 }
 
 #info {
